# Nvjpeg-ImageCompressor

./: .gitignore  CMakeLists.txt  README.md  ncu.sh  nvprof.sh
src/: main.cpp
src/ImageCompressor/: main.cpp
src/ImageCompressorDll/: CompressConfig.h  ImageCompressor.cpp  ImageCompressor.h  ImageCompressorImpl.cu  ImageCompressorImpl.cuh  ImageCompressorImpl.h  ImageCompressorlmpl.cpp  dirent.h
